--- a/source-html/reservation.html
+++ b/source-html/reservation.html
@@ -7,22 +7,10 @@
     <title>My nice page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-    <style>
-        .my-footer {
-            height: 5em;
-            margin-top: 1.5em;
-            padding: 1em;
-            background-color: rgb(60, 54, 54);
-            color: whitesmoke;
-            text-align: center;
-            font-size: 80%;
-        }
-
-        .room-image {
-            width: 50%;
-        }
-    </style>
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/css/datepicker-bs5.min.css">
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
+    <link rel="stylesheet" type="text/css" href="static/css/styles.css">
 </head>
 
 <body>
@@ -65,28 +53,28 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3"></div>
-            <div class="col-md">
+            <div class="col-md-6">
                 <h1 class="mt-5">Serch for Availability</h1>
-                <form action="reservation.html" method="get">
+                <form action="reservation.html" method="get" novalidate class="needs-validation">
                     <div class="row gx-3">
-                        <div class="col-auto mb-3">
-                            <label for="start_date" class="form-label">Starting date</label>
-                            <input required type="date" class="form-control" id="start_date" name="start_date"
-                                aria-describedby="startDateHelp">
-                            <div id="startDateHelp" class="form-text">Enter your starting date in the form of
-                                DD-MM-YYYY.
-                            </div>
-                        </div>
-                        <div class="col-auto mb-3">
-                            <label for="end_date" class="form-label">Ending date</label>
-                            <input required type="date" class="form-control" id="end_date" name="end_date"
-                                aria-describedby="endDateHelp">
-                            <div id="endDateHelp" class="form-text">Enter your ending date in the form of DD-MM-YYYY.
+                        <div class="col-md-6">
+                            <div id="reservation-dates">
+                                <input type="text" name="start" class="form-control mb-3" required
+                                    placeholder="Arrival">
+                                <input type="text" name="end" class="form-control" required placeholder="Departure">
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Search Availability</button>
+                    <button type="submit" class="btn btn-primary mt-3">Search Availability</button>
                 </form>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <p id="myParagraph">This is some text.</p>
+                <p>
+                    <button class="btn btn-outline-secondary" id="colorButton">Click Me</button>
+                </p>
             </div>
         </div>
     </div>
@@ -98,6 +86,185 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/js/datepicker-full.min.js"></script>
+    <script src="https://unpkg.com/notie"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <script>
+        const attention = Propmt();
+
+        (() => {
+            'use strict'
+
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            const forms = document.querySelectorAll('.needs-validation')
+
+            // Loop over them and prevent submission
+            Array.from(forms).forEach(form => {
+                form.addEventListener('submit', event => {
+                    if (!form.checkValidity()) {
+                        event.preventDefault()
+                        event.stopPropagation()
+                    }
+
+                    form.classList.add('was-validated')
+                }, false)
+            })
+        })();
+
+        document.getElementById("colorButton").addEventListener("click", () => {
+            // notifyModal("title", "<em>Hello, world!</em>", "success", "My Text for the button");
+            const html = `
+            <form id="check-availability-form" action="" method="post" novalidate class="needs-validation">
+                <div class="row gx-3">
+                    <div class="col">
+                        <div class="row" id="reservation-dates-modal">
+                            <div class="col">
+                                <input type="text" name="start" id="start" class="form-control mb-3" disabled required placeholder="Arrival">
+                            </div>
+                            <div class="col">
+                                <input type="text" name="end" id="end" class="form-control" disabled required placeholder="Departure">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+            `
+             
+            attention.custom({msg: html, title: "Choose your dates"});
+        });
+
+        const elem = document.getElementById("reservation-dates");
+        const rangepicker = new DateRangePicker(elem, {
+            buttonClass: "btn",
+            format: "dd-mm-yyyy",
+        });
+
+        function notify(msg, msgType) {
+            notie.alert({
+                type: msgType, // optional, default = 4, enum: [1, 2, 3, 4, 5, 'success', 'warning', 'error', 'info', 'neutral']
+                text: msg,
+            })
+        };
+
+        function notifyModal(title, html, icon, confirmButtonText) {
+            Swal.fire({
+                title: title,
+                html: html,
+                icon: icon,
+                confirmButtonText: confirmButtonText
+            })
+        }
+
+        function Propmt() {
+            const toast = (c) => {
+                const {
+                    msg = "",
+                    icon = "success",
+                    positon = "top-end",
+                } = c;
+
+                const Toast = Swal.mixin({
+                    toast: true,
+                    showConfirmButton: false,
+                    timer: 1500,
+                    timerProgressBar: true,
+                    didOpen: (toast) => {
+                        toast.onmouseenter = Swal.stopTimer;
+                        toast.onmouseleave = Swal.resumeTimer;   
+                    },
+                });
+
+                Toast.fire({
+                    title: msg,
+                    positon: positon,
+                    icon: icon
+                });
+            };
+
+            const message = (c) => {
+                const {
+                    msg = "",
+                    title = "",
+                    footer = "",
+                    icon = "",
+                } = c;
+
+                Swal.fire({
+                    icon: icon,
+                    title: title,
+                    text: msg,
+                    footer: footer
+                });
+            };
+
+            const success = (c) => {
+                message({
+                    msg: c["msg"],
+                    title: c["title"],
+                    footer: c["footer"],
+                    icon: "success"
+                })
+            };
+
+            const error = (c) => {
+                message({
+                    msg: c["msg"],
+                    title: c["title"],
+                    footer: c["footer"],
+                    icon: "error"
+                })
+            };
+
+            async function custom(c) {
+                const {
+                    msg = "",
+                    title = ""
+                } = c;
+
+                const { value: formValues } = await Swal.fire({
+                    title: title,
+                    html: msg,
+                    backdrop: false,
+                    focusConfirm: false,
+                    showCancelButton: true,
+                    willOpen: () => {
+                        
+                        const elem = document.getElementById("reservation-dates-modal");
+                        const rp = new DateRangePicker(elem, {
+                            format: "dd-mm-yyyy",
+                            showOnFocus: true,
+                        });
+                    },
+                    didOpen: () => {
+                        const container = document.getElementById("swal2-html-container");
+                        container.style.overflow = "unset";
+                        container.style.zIndex = "2";
+                        document.getElementById("start").removeAttribute("disabled");
+                        document.getElementById("end").removeAttribute("disabled");
+                    },
+                    preConfirm: () => {
+                        return [
+                            document.getElementById("start").value,
+                            document.getElementById("end").value
+                        ]
+                    }
+                });
+
+                if (formValues) {
+                    Swal.fire(JSON.stringify(formValues))
+                }
+            }
+
+            return {
+                toast: toast,
+                success: success,
+                error: error,
+                custom: custom
+            }
+        }
+
+    </script>
 </body>
 
 </html>
